# context-portal

./: .dockerignore  .gitignore  .rooignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  RELEASE_NOTES.md  SECURITY.md  TESTING_KV_CACHE.md  alembic.ini  cascade_conport_strategy  cline_conport_memory_strategy  cline_conport_strategy  conport_mcp_deep_dive.md  conport_memory_strategy.yml  generic_conport_strategy  kv_cache.md  projectBrief.md  pyproject.toml  requirements.txt  roo_code_conport_strategy  setup_test_data.py  test_mcp_client.py  v0.2.0_UPDATE_GUIDE.md  v0.2.2_UPDATE_GUIDE.md  v0.2.3_UPDATE_GUIDE.md  v0.2.4_UPDATE_GUIDE.md  windsurf_conport_memory_strategy
.github/: FUNDING.yml
alembic/: env.py
conport-custom-instructions/: cascade_conport_strategy  cline_conport_strategy  generic_conport_strategy  roo_code_conport_strategy
src/context_portal_mcp/: main.py
src/context_portal_mcp/core/: config.py  embedding_service.py  exceptions.py
src/context_portal_mcp/db/: database.py  models.py  vector_store_service.py
src/context_portal_mcp/handlers/: mcp_handlers.py
src/context_portal_mcp/templates/alembic/: alembic.ini
src/context_portal_mcp/templates/alembic/alembic/: env.py
src/context_portal_mcp/templates/alembic/alembic/versions/: .gitkeep  001_initial_schema.py  002_add_cache_metadata.py
tests/: test_kv_cache_basic.py  test_kv_cache_integration.py  test_kv_cache_performance.py
