[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "context-portal-mcp"
version = "0.2.3"
authors = [
  { name="Your Name", email="your.email@example.com" }, # Placeholder
]
description = "A Model Context Protocol (MCP) server for managing structured project context."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "mcp[cli]",
    "sentence-transformers",
    "chromadb",
    "alembic", # Added for database migrations
]

[project.urls]
"Homepage" = "https://github.com/GreatScottyMac/context-portal" # Assuming this is the main repo

[project.scripts]
conport-mcp = "context_portal_mcp.main:cli_entry_point" # Define an entry point script

[tool.setuptools.packages.find]
where = ["src"] # Look for packages in the src directory


[tool.setuptools]
include-package-data = true # Include data files specified in MANIFEST.in or package_data
# Explicitly include the alembic directory and alembic.ini from the root
# These are crucial for migrations when installed via PyPI
[tool.setuptools.data-files]
"" = ["alembic.ini"] # Install alembic.ini to the root of the site-packages
"alembic" = ["alembic/env.py", "alembic/README", "alembic/script.py.mako"]
"alembic/versions" = ["alembic/versions/068b7234d6a7_initial_database_schema.py"]